# skybizzle

./: README.md
cogs/Account/: settings.json
cogs/AddImage/: settings.json
cogs/Admin/: settings.json
cogs/Adventure/: settings.json  settings.old
cogs/AdventureAlert/: settings.json
cogs/Alias/: settings.json
cogs/Audio/: settings.json
cogs/Autorole/: settings.json
cogs/Away/: settings.json
cogs/Bank/: settings.json
cogs/BotStats/: settings.json
cogs/CCRole/: settings.json
cogs/Downloader/lib/cog_shared/seplib/: .gitignore  .travis.yml  info.json  pyproject.toml
cogs/Downloader/lib/cog_shared/seplib/aws/: sqs.py
cogs/Downloader/lib/cog_shared/seplib/classes/: basesepcog.py
cogs/Downloader/lib/cog_shared/seplib/cog/: __init__.py  sepcog.py
cogs/Downloader/lib/cog_shared/seplib/constants/: colors.py
cogs/Downloader/lib/cog_shared/seplib/replies/: errorreply.py
cogs/Downloader/lib/cog_shared/seplib/responses/: interactive_actions.py
cogs/Downloader/lib/cog_shared/seplib/responses/embeds/: __init__.py  embedreply.py  errorreply.py  inforeply.py  successreply.py
cogs/Downloader/lib/cog_shared/seplib/tests/: test_edit_member_roles.py  test_hexcolor.py  test_replies.py  test_seplib_cog.py
cogs/Downloader/lib/cog_shared/seplib/tests/fixtures/: cogs.py  discord_fixtures.py
cogs/Downloader/lib/cog_shared/seplib/utils/: __init__.py  random_utils.py
cogs/Downloader/lib/cog_shared/seplib/utils/queues/: __init__.py  edit_member_roles.py
cogs/Downloader/lib/cog_shared/seplib/validators/: __init__.py  url.py
core/: settings.json
(+353 files in other folders)
